My First Commit

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p class="name">Sehara Fernando</p>
+    <p class="name">Sehara Fernando Moda Miniha!</p>
+    <p class="myName">Judith Fernando</p>
 </body>
 </html>
