--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p class="name">Sehara Fernando</p>
-    <p class="name2">Dashintha Jayawardana</p>
+    <p class="dashintha">Dashintha Jayawardana</p>
 </body>
 </html>
