--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <p class="name">Sehara Fernando</p>
+    <p class="namehu">Manusha Nuwan</p>
+    <p class="name">John Doe</p>
+    <p class="name">John Doe</p>
+    <p class="name">John Doe</p>
+    <p class="name">John Doe</p>
+    <p class="name">John Doe</p>
 </body>
 </html>
