Adding New Line

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p class="name">Sehara Fernando</p>
-    <p class="name2">Your Name</p>
+    <p class="name2">Sehara Arunodya</p>
 </body>
 </html>
